--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -1,4 +1,17 @@
 .wrapper {
   padding-left: 18px;
   padding-right: 18px;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+
+  &--medium {
+    max-width: 976px;
+  }
+
+  .wrapper {
+    /* a wrapper nested inside another wrapper should not have additional padding */
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
