--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -1,12 +1,36 @@
 .page-section {
-  padding: 1.2rem;
+  padding: 1.2rem 0;
 
   @mixin atMedium {
     padding: 4.5rem 0;
   }
 
+  &--no-pb-until-medium {
+    padding-bottom: 0;
+
+    @mixin atMedium {
+      padding-bottom: 4.5rem;
+    }
+  }
+
+  &--no-pb-until-large {
+    padding-bottom: 0;
+
+    @mixin atLarge {
+      padding-bottom: 4.5rem;
+    }
+  }
+
   &--blue {
     background-color: $mainBlue;
     color: #fff;
+  }
+
+  &--testimonials {
+    background-color: #e0e6ef;
+    @mixin atLarge {
+      background: url('assets/images/testimonials-bg.jpg') top center no-repeat;
+      background-size: cover;
+    }
   }
 }
