--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -1,6 +1,14 @@
 .primary-nav {
+  padding-top: 10px;
+
+  @mixin atMedium {
+    padding-top: 0;
+  }
+
   &--pull-right {
-    float: right;
+    @mixin atMedium {
+      float: right;
+    }
 
     ul {
       margin: 0;
@@ -10,16 +18,37 @@
 
     li {
       list-style: none;
-      float: left;
-      padding-right: 20px;
+      display: inline-block;
+      padding-right: 7px;
+
+      @mixin atMedium {
+        float: left;
+        display: block;
+        padding-right: 20px;
+      }
+    }
+
+    li:last-child {
+      padding-right: 0;
+      @mixin atMedium {
+        padding-right: 20px;
+      }
     }
 
     a {
       text-decoration: none;
       color: #fff;
       font-weight: 300;
-      padding: 12px 0;
+      padding: 5px 8px;
       display: block;
+      font-size: 0.8rem;
+      background-color: rgba($mainBlue, 0.5);
+
+      @mixin atMedium {
+        padding: 12px 0;
+        font-size: 1rem;
+        background-color: transparent;
+      }
     }
   }
 }
