--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -10,7 +10,12 @@
   }
 
   @mixin atMedium {
+    position: fixed;
     background-color: rgba($mainBlue, 0.3);
+
+    &--dark {
+      background-color: rgba(23, 51, 72, 0.85);
+    }
   }
 
   &__btn-container {
@@ -31,6 +36,12 @@
       left: auto;
       transform: translateX(0);
       padding: 25px 36px;
+      transform-origin: 0 0;
+      transition: transform 0.3s ease-out;
+
+      .site-header--dark & {
+        transform: scale(0.55);
+      }
     }
   }
 
